# pyproxmox-ve

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-no-pydantic.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci_dev.yml
docs/: faq.md  how_to_use_advanced.md  how_to_use_basic.md  index.md  supported_endpoints.md
docs/code/: general_design.md  pyproxmoxveapi.md
docs/code/models/: base.md  user.md
docs/contributing/: branch_structure.md  coding_style.md  contributing.md  mkdocs.md  tests.md
pyproxmox_ve/: __init__.py  api.py  auth.py  exceptions.py
pyproxmox_ve/models/: access.py  base.py  cluster.py  enums.py  firewall.py  groups.py  logs.py  pools.py  roles.py  storage.py  tfa.py  user.py  version.py
pyproxmox_ve/resources/: __init__.py  base.py  version.py
pyproxmox_ve/resources/access/: access.py
pyproxmox_ve/resources/access/domains/: domains.py
pyproxmox_ve/resources/access/groups/: groups.py
pyproxmox_ve/resources/access/roles/: roles.py
pyproxmox_ve/resources/access/tfa/: tfa.py
pyproxmox_ve/resources/access/users/: users.py
pyproxmox_ve/resources/cluster/: cluster.py
pyproxmox_ve/resources/cluster/firewall/: firewall.py
pyproxmox_ve/resources/pools/: pools.py
pyproxmox_ve/resources/storage/: storage.py
tests/: conftest.py  test_storage.py  test_version.py
tests/access/: test_access.py  test_access_domains.py  test_access_groups.py  test_access_pools.py  test_access_roles.py  test_access_tfa.py  test_access_users.py  test_users.py  test_users_token.py
tests/cluster/: test_cluster.py  test_cluster_firewall.py
