[tool.poetry]
name = "pyproxmox-ve"
version = "0.1.0a2"
description = "Async wrapper (aiohttp) for Proxmox VE API"
authors = ["Brandon Spendlove <brandonspendlove@gmail.com>"]
license = "Apache Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.9"
pytest-aiohttp = "^1.0.5"
pytest-order = "^1.2.0"
pre-commit = "^3.6.0"


[tool.poetry.group.pydantic.dependencies]
pydantic = "^2.5.3"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.3"
mkdocstrings-python = "^1.7.5"


[tool.ruff]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501",  # Line too long ({width} > {limit})
]


[tool.ruff.format]
docstring-code-format = true


[tool.ruff.lint]
extend-select = [
    "D400"      # First line should end with a period
]


[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
